Inicia intento de creación de función Runge Kutta

--- a/notebooks/clase_1.ipynb
+++ b/notebooks/clase_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0b173a4d-e27a-498d-a296-9bdb2c11d7d2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f3cdedaa-a37e-49c4-ae09-f359fa5a14d2",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7d4ebe3b-9178-4130-846f-24a7608b3342",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ef4ed567-0b89-4fac-b208-e3a92c4877fa",
    "metadata": {},
    "outputs": [],
@@ -111,6 +111,14 @@
     "    y=np.exp(-t**2)\n",
     "    return y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74694fe1-e40c-4221-8386-17a040cec986",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "301c7b3c-d32e-4d7a-9070-5a035b01d7de",
    "metadata": {},
    "outputs": [
@@ -149,6 +157,50 @@
     "\n",
     "#plt.title(\"hola\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a568a0a-ad10-465b-8b3e-0ccadbfa1939",
+   "metadata": {},
+   "source": [
+    "## Error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6371b151-0bc0-48c6-928f-7e23cb8c2900",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "-0.6321205588285577\n",
+      "-0.7923352486852302\n",
+      "-0.5035354256708616\n",
+      "-0.21755666255163722\n",
+      "-0.05278004601309008\n",
+      "-0.0028107716819098347\n",
+      "0.00038253105730137044\n",
+      "-0.00012449235592648167\n",
+      "6.408778086156158e-05\n",
+      "-4.512689894985698e-05\n",
+      "4.032048367709114e-05\n",
+      "-4.366064208821112e-05\n",
+      "5.5544603840031886e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "error = []\n",
+    "\n",
+    "for t in range(len(taprox)):\n",
+    "    yreal = sol1(t)\n",
+    "    err = yreal - yaprox[t]\n",
+    "    print(err)"
    ]
   }
  ],
