Simulación básica de partícula a partir de sumatoria de fuerzas

--- a/notebooks/simulacion_1.ipynb
+++ b/notebooks/simulacion_1.ipynb
@@ -5,7 +5,52 @@
    "id": "7da455b7-6e77-4147-b7d5-04e128e95b52",
    "metadata": {},
    "source": [
-    "# **Clase 2. Simulacion de partículas**"
+    "# **Simulacion de partículas**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff56381d-39dd-4fc4-a7dc-7984f12e8b59",
+   "metadata": {},
+   "source": [
+    "## Conceptualización"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a736488-7ce7-4227-a9fb-016151697bfc",
+   "metadata": {},
+   "source": [
+    "Primero, observemos las siguientes relaciónes físicas:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\vec{\\dot{r}} &= \\vec{v} \\\\\n",
+    "\\vec{\\dot{v}} &= \\frac{\\vec{F}}{m}\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Donde:\n",
+    "* $\\vec{\\dot{r}}$ Corresponde a la derivada del vector de posición $<x,y,z>$. Es decir, la **Velocidad**\n",
+    "* $\\vec{\\dot{v}}$ Corresponde a la derivada del vector de velocidad $<v_x,v_y,v_z>$. Es decir, la **Aceleración**\n",
+    "* $\\vec{F}$ Corresponde al vector de la **Fuerza**\n",
+    "* $m$ Corresponde a la masa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3db88f-2d93-4ef9-b948-ccccc16d1edc",
+   "metadata": {},
+   "source": [
+    "Esto signifíca que podemos obtener la posición de un objeto unicamente con la sumatoria de fuerzas aplicadas sobre este"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a8f2fcf-4989-4056-be76-3bde5cfd2271",
+   "metadata": {},
+   "source": [
+    "## Clase Particula"
    ]
   },
   {
@@ -14,18 +59,11 @@
    "metadata": {},
    "source": [
     "A continuacion debemos de simular el comportamiento de una partícula, para ello diseñamos la siguiente clase:\n",
-    "| Class | Properties | Methods |\n",
-    "|---|---|---|\n",
-    "| Particula | * Posicion<br>* Velocidad<br>* Masa | Ecuacion() |"
+    "|--- Particula ---|\n",
+    "|:---|\n",
+    "|+ **Y** *vector <$\\vec{r}$ $\\vec{v}$>* <br>+ **Masa** <br>+ **F** *Fuerza* <br>+ **dt** *Delta de tiempo*|\n",
+    "|* sumarFuerzas() <br> * step()|\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf5a7827-1340-48e7-bf18-0a76068dca59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -52,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
